force-app/main/default/objects/Account/fields/Current_Solution__c.field-meta.xml
<CustomField>
    <fullName>Current_Solution__c</fullName>
    <description>Who does this account currently use for measurement?</description>
    <inlineHelpText>Who does this account currently use for measurement?</inlineHelpText>
    <label>Current Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blinkfire</fullName>
            </value>
            <value>
                <fullName>HookIt</fullName>
            </value>
            <value>
                <fullName>Horizm</fullName>
            </value>
            <value>
                <fullName>MVP Index</fullName>
            </value>
            <value>
                <fullName>Nielsen</fullName>
            </value>
            <value>
                <fullName>Shikenso</fullName>
            </value>
            <value>
                <fullName>Stream Engine</fullName>
            </value>
            <value>
                <fullName>YouGov/SMG</fullName>
            </value>
            <value>
                <fullName>Zoomph</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>