force-app/main/default/objects/Account/fields/Current_User_Acct_Mgmt__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Acct_Mgmt__c</fullName>
    <formula>or( 
$User.Id = Owner.ManagerId, 
$User.Id = Owner.Manager.ManagerId, 
$User.Id = Owner.Manager.Manager.ManagerId, 
$User.Id = Owner.Manager.Manager.Manager.ManagerId, 
$User.Id = Owner.Manager.Manager.Manager.Manager.ManagerId, 
$User.Id = Owner.Manager.Manager.Manager.Manager.Manager.ManagerId, 
$User.Id = Owner.Manager.Manager.Manager.Manager.Manager.Manager.ManagerId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User = Acct. Mgmt</label>
    <type>Checkbox</type>
</CustomField>