force-app/main/default/objects/Account/fields/Current_Year_Forecasted_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Forecasted_Revenue__c</fullName>
    <inlineHelpText>Revenue that is forecasted for this account in 2024 based on the Sales bottoms up. Check forecasted revenue updated date field to see when it was last updated.</inlineHelpText>
    <label>2024 Forecasted Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>