force-app/main/default/objects/Account/fields/DaScoopComposer__Account_Tags__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Account_Tags__c</fullName>
    <inlineHelpText>Indicates specific tags on the account by looking at activities and opportunities.</inlineHelpText>
    <label>Account Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>Untouched</fullName>
            </value>
            <value>
                <fullName>Cur. Effort</fullName>
            </value>
            <value>
                <fullName>Past Effort</fullName>
            </value>
            <value>
                <fullName>Meeting Scheduled</fullName>
            </value>
            <value>
                <fullName>Meeting, no Opportunity</fullName>
            </value>
            <value>
                <fullName>Open Opportunity</fullName>
            </value>
            <value>
                <fullName>Lost Opportunity</fullName>
            </value>
            <value>
                <fullName>Current Customer</fullName>
            </value>
            <value>
                <fullName>Churned Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>