force-app/main/default/objects/Account/fields/DaScoopComposer__Alias_1__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Alias_1__c</fullName>
    <inlineHelpText>A helper field added by Groove</inlineHelpText>
    <label>Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>