force-app/main/default/objects/Account/fields/DaScoopComposer__Churned_Customer__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Churned_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>indicates, whether this is a churned customer based on your business specific signals</inlineHelpText>
    <label>Churned Customer</label>
    <type>Checkbox</type>
</CustomField>