force-app/main/default/objects/Account/fields/DaScoopComposer__Domain_2__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Domain_2__c</fullName>
    <inlineHelpText>indicates the secondary email domain of the account (in case they have more than one). This is evaluated by Groove periodically</inlineHelpText>
    <label>Domain 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>