force-app/main/default/objects/Account/fields/DaScoopComposer__Dont_Match_Leads_to_this_Account__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Dont_Match_Leads_to_this_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Controls whether Groove will automatically match leads to this account.</inlineHelpText>
    <label>Don&apos;t Match Leads to this Account</label>
    <type>Checkbox</type>
</CustomField>