force-app/main/default/objects/Account/fields/DaScoopComposer__Hash_3__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Hash_3__c</fullName>
    <inlineHelpText>A helper field added by Groove</inlineHelpText>
    <label>Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>