force-app/main/default/objects/Account/fields/Days_Until_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Renewal_Date__c</fullName>
    <description>The number of days between today and the &quot;Target Renewal Date&quot; (Contract End Date)</description>
    <formula>Renewal_Date_Client__c - TODAY()</formula>
    <inlineHelpText>The number of days between today and the &quot;Target Renewal Date&quot; (Contract End Date)</inlineHelpText>
    <label>Days Until Target Renewal Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>