force-app/main/default/objects/Account/fields/Does_the_guarantee_change_monthly__c.field-meta.xml
<CustomField>
    <fullName>Does_the_guarantee_change_monthly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does the guarantee change monthly?</label>
    <type>Checkbox</type>
</CustomField>