force-app/main/default/objects/Account/fields/Domain_Count__c.field-meta.xml
<CustomField>
    <fullName>Domain_Count__c</fullName>
    <description>Used by &quot;Create Domain&quot; process to check if a Domain record already exists.</description>
    <label>Domain Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>