force-app/main/default/objects/Account/fields/DSP_Formats__c.field-meta.xml
<CustomField>
    <fullName>DSP_Formats__c</fullName>
    <inlineHelpText>Need values please</inlineHelpText>
    <label>DSP Formats</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value 1</fullName>
            </value>
            <value>
                <fullName>Value 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>