force-app/main/default/objects/Account/fields/Forecasted_2019_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_2019_Revenue__c</fullName>
    <inlineHelpText>Revenue that is forecasted for this account in 2023 based on the Sales bottoms up.</inlineHelpText>
    <label>2023 Forecasted Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>