force-app/main/default/objects/Account/fields/Forecasted_Revenue_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Revenue_Updated_Date__c</fullName>
    <inlineHelpText>Date the current year forecasted revenue amount was last updated according to updates on the annual bottoms up.</inlineHelpText>
    <label>Forecasted Revenue Updated Date</label>
    <type>Date</type>
</CustomField>