force-app/main/default/objects/Account/fields/GG100_Prospects__c.field-meta.xml
<CustomField>
    <fullName>GG100_Prospects__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GG100 Prospects</label>
    <type>Checkbox</type>
</CustomField>