force-app/main/default/objects/Account/fields/GG40_Clients__c.field-meta.xml
<CustomField>
    <fullName>GG40_Clients__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GG40 Clients</label>
    <type>Checkbox</type>
</CustomField>