force-app/main/default/objects/Account/fields/GG_Top_10__c.field-meta.xml
<CustomField>
    <fullName>GG_Top_10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GG Top 10</label>
    <type>Checkbox</type>
</CustomField>