force-app/main/default/objects/Account/fields/Guarantee_End__c.field-meta.xml
<CustomField>
    <fullName>Guarantee_End__c</fullName>
    <label>Guarantee End</label>
    <type>Date</type>
</CustomField>