force-app/main/default/objects/Account/fields/GumGum_Out__c.field-meta.xml
<CustomField>
    <fullName>GumGum_Out__c</fullName>
    <label>GumGum Out</label>
    <length>200</length>
    <type>Text</type>
</CustomField>