force-app/main/default/objects/Account/fields/Industry_Missing__c.field-meta.xml
<CustomField>
    <fullName>Industry_Missing__c</fullName>
    <description>Industry is missing a value; used for oppty page</description>
    <formula>IF(
AND(
RecordType.Name = &quot;Advertising&quot; ,

ISBLANK(TEXT( Industry  ))),TRUE,FALSE)</formula>
    <inlineHelpText>Industry is missing a value; used for oppty page</inlineHelpText>
    <label>Industry Missing</label>
    <type>Checkbox</type>
</CustomField>