force-app/main/default/objects/Account/fields/IT_Stack__c.field-meta.xml
<CustomField>
    <fullName>IT_Stack__c</fullName>
    <label>IT Stack</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>