force-app/main/default/objects/Account/fields/Key_Account__c.field-meta.xml
<CustomField>
    <fullName>Key_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key Account?</label>
    <type>Checkbox</type>
</CustomField>