force-app/main/default/objects/Account/fields/Last_Activity_by_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_by_Sales_Rep__c</fullName>
    <description>Shows the last activity that was done by a Sales Rep User Role</description>
    <inlineHelpText>Shows the last activity that was done by a Sales Rep User Role</inlineHelpText>
    <label>Last Activity by Sales Rep</label>
    <type>Date</type>
</CustomField>