force-app/main/default/objects/Account/fields/Last_Bottom_up_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Bottom_up_Activity_Date__c</fullName>
    <label>Last Bottom up Activity Date</label>
    <type>Date</type>
</CustomField>