force-app/main/default/objects/Account/fields/Last_Opp__c.field-meta.xml
<CustomField>
    <fullName>Last_Opp__c</fullName>
    <description>Latest opp based on close date. Automatically Calculated</description>
    <inlineHelpText>Latest brand opportunity based on close date. Automatically Calculated;</inlineHelpText>
    <label>Brand Last Opp Won Date</label>
    <type>Date</type>
</CustomField>