force-app/main/default/objects/Account/fields/Last_Opp_Close_Date_Agency__c.field-meta.xml
<CustomField>
    <fullName>Last_Opp_Close_Date_Agency__c</fullName>
    <description>Agency Opportunity Last Closed Won Date of record types (Advertising, Activation, Playground Attention Intelligence Platform, Open Market, Verity, Video)</description>
    <inlineHelpText>Agency Opportunity Last Closed Won Date of record types (Advertising, Activation, Playground Attention Intelligence Platform, Open Market, Verity, Video)</inlineHelpText>
    <label>Last Opp Close Date - Agency</label>
    <type>Date</type>
</CustomField>