force-app/main/default/objects/Account/fields/Last_Opp_Close_Date_Brand_And_Agency__c.field-meta.xml
<CustomField>
    <fullName>Last_Opp_Close_Date_Brand_And_Agency__c</fullName>
    <formula>IF(ISNULL(Last_Opp_Close_Date_Agency__c ),
    Last_Opportunity_Close_Date__c ,
    IF(ISNULL(Last_Opportunity_Close_Date__c ),
        Last_Opp_Close_Date_Agency__c ,
        IF(Last_Opp_Close_Date_Agency__c &gt;=Last_Opportunity_Close_Date__c ,
            Last_Opp_Close_Date_Agency__c ,
             Last_Opportunity_Close_Date__c 
           )
       )
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Opp Close Date - Brand And Agency</label>
    <type>Date</type>
</CustomField>