force-app/main/default/objects/Account/fields/Last_Opportunity_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Opportunity_Close_Date__c</fullName>
    <description>Last Opportunity Closed Won Date of Brand of Record Types(Advertising, Activation, Playground Attention Intelligence Platform, Open Market, Verity, Video)</description>
    <label>Last Opp Close Date - Brand</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed/Won</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Verity, Open Market, Advertising, Video, Activation, Playground Attention Intelligence Platform</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>