force-app/main/default/objects/Account/fields/Last_Sign_Off_Performed_By_del__c.field-meta.xml
<CustomField>
    <fullName>Last_Sign_Off_Performed_By_del__c</fullName>
    <inlineHelpText>User who last updated the field &quot;2022 Data Clean Up Sign Off&quot; and last modified date.</inlineHelpText>
    <label>Last Sign Off Performed By and Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>