force-app/main/default/objects/Account/fields/Lead_Notes__c.field-meta.xml
<CustomField>
    <fullName>Lead_Notes__c</fullName>
    <inlineHelpText>Brought over from the lead notes field.</inlineHelpText>
    <label>Lead Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>