force-app/main/default/objects/Account/fields/League__c.field-meta.xml
<CustomField>
    <fullName>League__c</fullName>
    <label>League</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>League</valueSetName>
    </valueSet>
</CustomField>