force-app/main/default/objects/Account/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advertiser Conflict</fullName>
            </value>
            <value>
                <fullName>CPMs</fullName>
            </value>
            <value>
                <fullName>Display ONLY</fullName>
            </value>
            <value>
                <fullName>Fill</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>No Interest</fullName>
            </value>
            <value>
                <fullName>No New Partners</fullName>
            </value>
            <value>
                <fullName>Other (Please Explain Below)</fullName>
            </value>
            <value>
                <fullName>Payment Terms</fullName>
            </value>
            <value>
                <fullName>Product Fit</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>UX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>