force-app/main/default/objects/Account/fields/Lost_Reason_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Additional_Information__c</fullName>
    <label>Lost Reason Additional Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>