force-app/main/default/objects/Account/fields/Margins_of_Rev_Share__c.field-meta.xml
<CustomField>
    <fullName>Margins_of_Rev_Share__c</fullName>
    <label>Margins of Rev Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>