force-app/main/default/objects/Account/fields/Matched_Leads__c.field-meta.xml
<CustomField>
    <fullName>Matched_Leads__c</fullName>
    <label>Matched Leads</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>