force-app/main/default/objects/Account/fields/Media_Channel_Social__c.field-meta.xml
<CustomField>
    <fullName>Media_Channel_Social__c</fullName>
    <label>Social</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Media_Channel_s</valueSetName>
    </valueSet>
</CustomField>