force-app/main/default/objects/Account/fields/National__c.field-meta.xml
<CustomField>
    <fullName>National__c</fullName>
    <inlineHelpText>Is this a national brand account?</inlineHelpText>
    <label>National</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>