force-app/main/default/objects/Account/fields/National_Parent__c.field-meta.xml
<CustomField>
    <fullName>National_Parent__c</fullName>
    <formula>TEXT( Parent.National__c )</formula>
    <inlineHelpText>Yes is National
No is not National</inlineHelpText>
    <label>National Parent?</label>
    <type>Text</type>
</CustomField>