force-app/main/default/objects/Account/fields/NDA_Attached__c.field-meta.xml
<CustomField>
    <fullName>NDA_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NDA Attached</label>
    <type>Checkbox</type>
</CustomField>