force-app/main/default/objects/Account/fields/Netsuite_ID__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_ID__c</fullName>
    <label>NetSuite ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>