force-app/main/default/objects/Account/fields/Number_of_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Contacts__c</fullName>
    <description>Calculates the number of Contacts within the Account</description>
    <inlineHelpText>Calculates the number of Contacts within the Account</inlineHelpText>
    <label>Number of Contacts</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>