force-app/main/default/objects/Account/fields/Only_Agency_Open_and_Won_Opp_Count__c.field-meta.xml
<CustomField>
    <fullName>Only_Agency_Open_and_Won_Opp_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Agency Opportunity Open and Won Count of record types (Advertising, Verity, Open Market)</description>
    <inlineHelpText>Agency Opportunity Open and Won Count of record types (Advertising, Verity, Open Market)</inlineHelpText>
    <label>Agency Open and Won Opp Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>