force-app/main/default/objects/Account/fields/Only_Agency_Opp_Won_Count__c.field-meta.xml
<CustomField>
    <fullName>Only_Agency_Opp_Won_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Agency Opportunity Won  Count of record types (Advertising, Activation, Playground Attention Intelligence Platform, Open Market, Verity, Video)</description>
    <inlineHelpText>Agency Opportunity Won Count of record types (Advertising, Activation, Playground Attention Intelligence Platform, Open Market, Verity, Video)</inlineHelpText>
    <label>Agency Opp Won Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>