force-app/main/default/objects/Account/fields/Open_and_Won_Opp_Count_Brand_And_Agency__c.field-meta.xml
<CustomField>
    <fullName>Open_and_Won_Opp_Count_Brand_And_Agency__c</fullName>
    <formula>Opp_Count__c +  Only_Agency_Open_and_Won_Opp_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open and Won Opp Count -Brand And Agency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>