force-app/main/default/objects/Account/fields/Open_Opps__c.field-meta.xml
<CustomField>
    <fullName>Open_Opps__c</fullName>
    <description>How many Open Opps are in this Account?</description>
    <inlineHelpText>How many Open Opps are in this Account?</inlineHelpText>
    <label>Brand Open Opp Count</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Closed/Won, Closed/Lost, Discard</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Verity, Open Market, Advertising</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Agency_Name__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>