force-app/main/default/objects/Account/fields/Open_Opps_Renewals__c.field-meta.xml
<CustomField>
    <fullName>Open_Opps_Renewals__c</fullName>
    <description>How many Open Renewal Opps are in this Account?</description>
    <inlineHelpText>How many Open Renewal Opps are in this Account?</inlineHelpText>
    <label>Open Opps (Renewals)</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Closed/Won, Closed/Lost</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>Renewal</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>