force-app/main/default/objects/Account/fields/Opp_Count__c.field-meta.xml
<CustomField>
    <fullName>Opp_Count__c</fullName>
    <inlineHelpText>Closed Won + Open (Excludes Closed Lost)</inlineHelpText>
    <label>Brand Open and Won Opp Count</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Closed/Lost, Discard</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Verity, Open Market, Advertising</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Agency_Name__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>