force-app/main/default/objects/Account/fields/Opp_Open_Count_Brand_And_Agency__c.field-meta.xml
<CustomField>
    <fullName>Opp_Open_Count_Brand_And_Agency__c</fullName>
    <formula>Open_Opps__c +  Only_Agency_Open_Opp_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Open Count - Brand And Agency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>