force-app/main/default/objects/Account/fields/Opp_Won_Count_Brand_And_Agency__c.field-meta.xml
<CustomField>
    <fullName>Opp_Won_Count_Brand_And_Agency__c</fullName>
    <description>Brand And Agency Won Count</description>
    <formula>Opps_Won_TEMP__c +  Only_Agency_Opp_Won_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Won Count - Brand And Agency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>