force-app/main/default/objects/Account/fields/Opportunity_Count_BrandandAgency__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Count_BrandandAgency__c</fullName>
    <formula>Brand_Opp_Count__c +  Only_Agency_Opp_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Count-Brand and Agency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>