force-app/main/default/objects/Account/fields/Opportunity_Count_RUH_del__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Count_RUH_del__c</fullName>
    <label>Opportunity Count (RUH)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>