force-app/main/default/objects/Account/fields/Opps_Won_TEMP__c.field-meta.xml
<CustomField>
    <fullName>Opps_Won_TEMP__c</fullName>
    <description>How many Won Opps are in this Account?</description>
    <inlineHelpText>How many Won Opps are in this Account?</inlineHelpText>
    <label>Brand Opp Won Count</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed/Won</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Verity, Open Market, Video, Activation, Playground Attention Intelligence Platform, Advertising</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>