force-app/main/default/objects/Account/fields/OTT__c.field-meta.xml
<CustomField>
    <fullName>OTT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OTT</label>
    <type>Checkbox</type>
</CustomField>