force-app/main/default/objects/Account/fields/Owner_Status__c.field-meta.xml
<CustomField>
    <fullName>Owner_Status__c</fullName>
    <formula>Owner.IsActive</formula>
    <label>Owner Status</label>
    <type>Checkbox</type>
</CustomField>