force-app/main/default/objects/Account/fields/Ownership_Type__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Type__c</fullName>
    <description>Independent: Solo business
Parent: Controlling business entity
Branch: Regional HQ of parent/sub
Subsidiary: Separate business entity owned by a parent
Division: Unit of an entity but not a separate business
Holding: In name only (not to prospect)</description>
    <inlineHelpText>Independent: Solo business
Parent: Controlling business entity
Branch: Regional HQ of parent/sub
Subsidiary: Separate business entity owned by a parent
Division: Unit of an entity but not a separate business
Holding: In name only (not to prospect)</inlineHelpText>
    <label>Ownership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Independent</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Subsidiary</fullName>
            </value>
            <value>
                <fullName>Division</fullName>
            </value>
            <value>
                <fullName>Holding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>