force-app/main/default/objects/Account/fields/Parent_Account_Country__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Country__c</fullName>
    <label>Parent Account Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>