force-app/main/default/objects/Account/fields/Parent_Account_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_State_Province__c</fullName>
    <label>Parent Account State/Province</label>
    <length>50</length>
    <type>Text</type>
</CustomField>