force-app/main/default/objects/Account/fields/Parent_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Type__c</fullName>
    <formula>TEXT(Parent.Type)</formula>
    <label>Parent Account Type</label>
    <type>Text</type>
</CustomField>